--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -11,5 +11,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dphmkdr8b",
+    "ApiKey": "615882323181618",
+    "ApiSecret": "nQBgxzIwkhayhdoQOS1Di0amub0"
+  }
 }
